# domichain-program-library

./: .gitignore  Anchor.toml  Cargo.toml  README.md  check_program.sh  mint_token.sh  rust-toolchain.toml  test_compile.sh  test_deploy.sh  test_mint.sh  test_token_swap.sh
binary-option/program/: Cargo.toml
binary-option/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  spl_utils.rs  state.rs  system_utils.rs  validation_utils.rs
binary-oracle-pair/program/: Cargo.toml
binary-oracle-pair/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
binary-oracle-pair/program/tests/: tests.rs
examples/rust/transfer-lamports/: Cargo.toml
examples/rust/transfer-lamports/src/: processor.rs
farms/farm-client/: Cargo.toml
farms/farm-client/src/: client.rs  error.rs
farms/farm-ctrl/: Cargo.toml
farms/farm-ctrl/src/: config.rs  fund.rs  generate.rs  get.rs  governance.rs  main.rs  refdb.rs  vault.rs
farms/farm-rpc/: Cargo.toml  swagger.yaml
farms/farm-rpc/static/: index.html
farms/fund/: Cargo.toml
farms/fund/src/: common.rs  entrypoint.rs  fund_info.rs  user_info.rs
farms/fund/tests/: main.rs
farms/router-main/: Cargo.toml
farms/router-main/src/: add_farm.rs  add_fund.rs  add_pool.rs  add_token.rs  add_vault.rs  processor.rs  refdb_init.rs  refdb_instruction.rs  remove_farm.rs  remove_fund.rs  remove_pool.rs  remove_token.rs  remove_vault.rs  set_admin_signers.rs  set_program_admin_signers.rs  set_program_single_authority.rs  upgrade_program.rs
farms/router-orca/: Cargo.toml
farms/router-orca/src/: add_liquidity.rs  entrypoint.rs  harvest.rs  processor.rs  remove_liquidity.rs  stake.rs  swap.rs  unstake.rs  user_init.rs
farms/vaults/: Cargo.toml
farms/vaults/src/: entrypoint.rs  traits.rs  user_info.rs  vault_info.rs
feature-proposal/cli/: Cargo.toml
feature-proposal/cli/src/: main.rs
governance/addin-mock/program/: Cargo.toml
governance/program/: Cargo.toml
governance/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
governance/program/tests/: migrate_legacy_accounts.rs  process_add_required_signatory.rs  process_add_signatory.rs  process_cancel_proposal.rs  process_cast_vote.rs  process_create_governance.rs  process_create_mint_governance.rs  process_create_native_treasury.rs  process_create_program_governance.rs  process_create_proposal.rs  process_create_realm.rs  process_create_token_governance.rs  process_create_token_owner_record.rs  process_deposit_governing_tokens.rs  process_execute_transaction.rs  process_finalize_vote.rs  process_flag_transaction_error.rs  process_insert_transaction.rs  process_refund_proposal_deposit.rs  process_relinquish_vote.rs  process_remove_required_signatory.rs  process_remove_signatory.rs  process_remove_transaction.rs  process_revoke_governing_tokens.rs  process_set_governance_config.rs  process_set_governance_delegate.rs  process_set_realm_authority.rs  process_set_realm_config.rs  process_sign_off_proposal.rs  process_update_program_metadata.rs  process_withdraw_governing_tokens.rs  setup_realm_with_all_addins.rs  setup_realm_with_max_voter_weight_addin.rs  setup_realm_with_voter_weight_addin.rs  use_proposals_with_multiple_options.rs  use_realm_with_all_addins.rs  use_realm_with_max_voter_weight_addin.rs  use_realm_with_voter_weight_addin.rs  use_veto_vote.rs
governance/test-sdk/: Cargo.toml
governance/test-sdk/src/: addins.rs  cookies.rs  lib.rs  tools.rs
libraries/math/: Cargo.toml
libraries/math/src/: error.rs  instruction.rs  lib.rs  processor.rs
libraries/math/tests/: instruction_count.rs
libraries/merkle-tree-reference/: Cargo.toml
libraries/merkle-tree-reference/src/: lib.rs
managed-token/program/: Cargo.toml
managed-token/program/src/: accounts.rs  instruction.rs  lib.rs  token.rs
managed-token/program/tests/: test.rs
memo/program/: Cargo.toml
memo/program/src/: lib.rs  processor.rs
memo/program/tests/: functional.rs
name-service/program/: Cargo.toml
name-service/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
name-service/program/tests/: functional.rs
record/program/: Cargo.toml
record/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
record/program/tests/: functional.rs
shared-memory/program/: Cargo.toml
shared-memory/program/src/: lib.rs
shared-memory/program/tests/: shared-memory.rs
stake-pool/cli/: Cargo.toml
stake-pool/cli/src/: client.rs  main.rs  output.rs
stake-pool/program/: Cargo.toml
stake-pool/program/src/: big_vec.rs  entrypoint.rs  error.rs  inline_mpl_token_metadata.rs  instruction.rs  lib.rs  processor.rs  state.rs
stake-pool/program/tests/: create_pool_token_metadata.rs  decrease.rs  deposit.rs  deposit_authority.rs  deposit_edge_cases.rs  deposit_sol.rs  force_destake.rs  huge_pool.rs  increase.rs  initialize.rs  redelegate.rs  set_deposit_fee.rs  set_epoch_fee.rs  set_funding_authority.rs  set_manager.rs  set_preferred.rs  set_referral_fee.rs  set_staker.rs  set_withdrawal_fee.rs  update_pool_token_metadata.rs  update_stake_pool_balance.rs  update_validator_list_balance.rs  update_validator_list_balance_hijack.rs  vsa_add.rs  vsa_remove.rs  withdraw.rs  withdraw_edge_cases.rs  withdraw_sol.rs  withdraw_with_fee.rs
stateless-asks/program/: Cargo.toml
stateless-asks/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  validation_utils.rs
token-lending/cli/: Cargo.toml
token-lending/cli/src/: main.rs
token-lending/flash_loan_receiver/: Cargo.toml
token-lending/flash_loan_receiver/src/: entrypoint.rs  processor.rs
token-upgrade/cli/: Cargo.toml
token-upgrade/cli/src/: main.rs
token/cli/: Cargo.toml
token/cli/src/: bench.rs  config.rs  main.rs  output.rs  sort.rs
token/client/: Cargo.toml
token/client/src/: client.rs  output.rs  token.rs
token/client/tests/: program-test.rs
token/program-usdt/: Cargo.toml  program-id.md
token/program-usdt/src/: instruction.rs  lib.rs  native_mint.rs
token/program-usdt/tests/: close_account.rs
(+631 files in other folders)
