[package]
name = "binary-option"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
domichain-program = { path = "../../../domichain/sdk/program" }
thiserror = "1.0"
spl-token = {version = "3.1.1", path = "../../token/program", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9"
uint = "0.9"

[lib]
crate-type = ["cdylib", "lib"]
