[package]
name = "spl-binary-oracle-pair"
version = "0.1.0"
description = "Solana Program Library Binary Oracle Pair"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
domichain-program = { path = "../../../domichain/sdk/program" }
spl-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
uint = "0.9"
borsh = "0.10.3"

[dev-dependencies]
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }

[lib]
crate-type = ["cdylib", "lib"]
