[package]
name = "solana-farm-ctrl"
version = "1.1.3"
description = "Solana Farm Control"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
debug = []

[dependencies]
log = "0.4.16"
clap = "2.34.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
domichain-client = { path = "../../../domichain/client" }
domichain-logger = { path = "../../../domichain/logger" }
domichain-version = { path = "../../../domichain/version" }
domichain-clap-utils = { path = "../../../domichain/clap-utils" }
domichain-sdk = { path = "../../../domichain/sdk" }
domichain-farm-sdk = { path = "../../farms/farm-sdk" }
domichain-farm-client = { path = "../../farms/farm-client" }
domichain-account-decoder = { path = "../../../domichain/account-decoder" }
spl-associated-token-account = { version = "=1.0.3", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", path = "../../token/program", features = ["no-entrypoint"] }
spl-governance = { version = "2.1.4", path = "../../governance/program", features = ["no-entrypoint"] }
domichain-cli-config = { path = "../../../domichain/cli-config" }
quarry-mine = { version = "5.0.2", features = ["no-entrypoint"] }
url = "2.2.2"
num_enum = "0.5.7"
