[package]
name = "solana-farm-rpc"
version = "1.1.3"
description = "Solana Farm RPC"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
debug = []

[dependencies]
log = "0.4.16"
bs58 = "0.4.0"
clap = "2.34.0"
dirs-next = "2.0.0"
lazy_static = "1.4.0"
reqwest = "0.11.10"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
domichain-client = { path = "../../../domichain/client" }
domichain-logger = { path = "../../../domichain/logger" }
domichain-version = { path = "../../../domichain/version" }
domichain-clap-utils = { path = "../../../domichain/clap-utils" }
domichain-sdk = { path = "../../../domichain/sdk" }
domichain-farm-sdk = { path = "../../farms/farm-sdk" }
domichain-farm-client = { path = "../../farms/farm-client" }
domichain-account-decoder = { path = "../../../domichain/account-decoder" }
domichain-cli-config = { path = "../../../domichain/cli-config" }
rusqlite = "0.27.0"
url = "2.2.2"

[[bin]]
name = "solana-farm-rpc"
path = "src/rpc/main.rs"

[[bin]]
name = "solana-farm-stats"
path = "src/stats/main.rs"