[package]
name = "solana-fund"
version = "1.1.3"
description = "Solana Yield Farming Fund"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []
debug = []

[dependencies]
domichain-farm-sdk = { path = "../../farms/farm-sdk" }
domichain-program = { path = "../../../domichain/sdk/program" }
solana-security-txt = "1.0.1"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
num_enum = "0.5.7"

[dev-dependencies]
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-farm-client = { path = "../../farms/farm-client" }
domichain-sdk = { path = "../../../domichain/sdk" }
domichain-cli-config = { path = "../../../domichain/cli-config" }
domichain-logger = { path = "../../../domichain/logger" }
rand = "0.8.5"
log = "0.4.16"

[lib]
crate-type = ["cdylib", "lib"]

