[package]
name = "solana-router-main"
version = "1.1.3"
description = "Solana Farm Main Router"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []
debug = []

[dependencies]
domichain-farm-sdk = { path = "../../farms/farm-sdk" }
spl-token = { version = "3.2.0", path = "../../token/program", features = ["no-entrypoint"] }
domichain-program = { path = "../../../domichain/sdk/program" }
solana-security-txt = "1.0.1"
arrayref = "0.3.6"
arrayvec = "0.7.2"

[dev-dependencies]
domichain-program-test = { path = "../../../domichain/program-test" }

[lib]
crate-type = ["cdylib", "lib"]

