[package]
name = "solana-router-orca"
version = "1.1.3"
description = "Solana Orca Router"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []
debug = []

[dependencies]
domichain-farm-sdk = { path = "../../farms/farm-sdk" }
domichain-program = { path = "../../../domichain/sdk/program" }
solana-security-txt = "1.0.1"
arrayref = "0.3.6"
spl-token-swap = { version = "2.1.0", path = "../../token-swap/program", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
domichain-program-test = { path = "../../../domichain/program-test" }

[lib]
crate-type = ["cdylib", "lib"]

