[package]
name = "solana-vaults"
version = "1.1.3"
description = "Solana Vaults"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []
debug = []
RDM-STAKE-LP-COMPOUND = []
SBR-STAKE-LP-COMPOUND = []
ORC-STAKE-LP-COMPOUND = []
default = ["RDM-STAKE-LP-COMPOUND"]

[dependencies]
domichain-farm-sdk = { path = "../../farms/farm-sdk" }
domichain-program = { path = "../../../domichain/sdk/program" }
solana-security-txt = "1.0.1"
spl-token = { version = "3.2.0", path = "../../token/program", features = ["no-entrypoint"] }
arrayref = "0.3.6"

[dev-dependencies]
domichain-program-test = { path = "../../../domichain/program-test" }

[lib]
crate-type = ["cdylib", "lib"]
