[package]
name = "spl-feature-proposal-cli"
version = "1.2.0"
description = "SPL Feature Proposal Command-line Utility"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
clap = "2.33.3"
domichain-clap-utils = { path = "../../../domichain/clap-utils" }
domichain-cli-config = { path = "../../../domichain/cli-config" }
domichain-client = { path = "../../../domichain/client" }
domichain-logger = { path = "../../../domichain/logger" }
domichain-sdk = { path = "../../../domichain/sdk" }
spl-feature-proposal = { version = "1.0", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "spl-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
