[package]
name = "spl-governance"
version = "3.1.0"
description = "Solana Program Library Governance Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.10.3"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.130"
serde_derive = "1.0.103"
domichain-program = { path = "../../../domichain/sdk/program" }
spl-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
spl-governance-tools= { version = "0.1.3", path ="../tools"}
spl-governance-addin-api= { version = "0.1.3", path ="../addin-api"}
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
proptest = "1.0"
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }
spl-governance-test-sdk = { version = "0.1.3", path ="../test-sdk"}
spl-governance-addin-mock = { version = "0.1.3", path ="../addin-mock/program"}


[lib]
crate-type = ["cdylib", "lib"]
