[package]
name = "spl-governance-test-sdk"
version = "0.1.3"
description = "Solana Program Library Governance Program Test SDK"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.10.3"
lazy_static = "1.4.0"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.127"
serde_derive = "1.0.103"
domichain-program = { path = "../../../domichain/sdk/program" }
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }
spl-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
