[package]
name = "spl-math"
version = "0.1.0"
description = "Solana Program Library Math"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
num-derive = "0.3"
num-traits = "0.2"
domichain-program = { path = "../../../domichain/sdk/program" }
thiserror = "1.0"
uint = "0.9"

# [dev-dependencies]
# proptest = "1.0.0"
# solana-program-test = "1.14.12"
# solana-sdk = "1.14.12"
# libm = "0.2.2"

[lib]
crate-type = ["cdylib", "lib"]


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
