[package]
name = "spl-merkle-tree-reference"
version = "0.1.0"
description = "Reference implementation of a merkle tree"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
domichain-program = { path = "/home/zotho/domichain_backporting/sdk/program" }
thiserror = "1.0.44"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
