[package]
name = "spl-managed-token"
version = "0.1.0"
description = "Solana Program Library Token Swap"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_managed_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
domichain-program = { path = "../../../domichain/sdk/program" }
shank = "^0.0.5"
spl-token = { path = "../../token/program", features = ["no-entrypoint"] }
spl-associated-token-account = { path = "../../associated-token-account/program", features = [ "no-entrypoint", ] }
thiserror = "^1.0.24"
borsh = "0.10.3"

[dev-dependencies]
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }
tokio = { version = "1.8.4", features = ["full"] }
anyhow = "1.0.52"
