[package]
name = "spl-memo"
version = "4.0.0"
description = "Solana Program Library Memo"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
domichain-program = { path = "/home/zotho/domichain_backporting/sdk/program" }

[dev-dependencies]
solana-program-test = "1.16.3"
solana-sdk = "1.16.3"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
