[package]
name = "spl-name-service"
description = "Solana Program Library Name Service"
version = "0.2.0"
repository = "https://github.com/solana-labs/solana-program-library"
authors = [
  "lcchy <lucas@bonfida.com>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
domichain-program = { path = "../../../domichain/sdk/program" }
num-traits = "0.2"
borsh = "0.10.3"
num-derive = "0.3.3"
thiserror = "1.0.29"

[dev-dependencies]
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }

[lib]
crate-type = ["cdylib", "lib"]
