[package]
name = "spl-record"
version = "0.1.0"
description = "Solana Program Library Record Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
num-derive = "0.3"
num-traits = "0.2"
domichain-program = { path = "../../../domichain/sdk/program" }
thiserror = "1.0"

[dev-dependencies]
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
