[package]
name = "spl-shared-memory"
version = "2.0.6"
description = "Solana Program Library Shared-memory"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
arrayref = "0.3.6"
domichain-program = { path = "../../../domichain/sdk/program" }

[dev-dependencies]
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }

[lib]
crate-type = ["cdylib", "lib"]
