[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.7.0"

[dependencies]
borsh = "0.10.3"
clap = "2.33.3"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
domichain-account-decoder = { path = "../../../domichain/account-decoder" }
domichain-clap-utils = { path = "../../../domichain/clap-utils" }
domichain-cli-config = { path = "../../../domichain/cli-config" }
domichain-cli-output = { path = "../../../domichain/cli-output" }
domichain-client = { path = "../../../domichain/client" }
domichain-logger = { path = "../../../domichain/logger" }
domichain-program = { path = "../../../domichain/sdk/program" }
domichain-remote-wallet = { path = "../../../domichain/remote-wallet" }
domichain-sdk = { path = "../../../domichain/sdk" }
spl-associated-token-account = { version = "=1.1.3", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-stake-pool = { version = "=0.7.0", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "=3.5.0", path="../../token/program", features = [ "no-entrypoint" ]  }
bs58 = "0.4.0"
bincode = "1.3.1"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
