[package]
name = "spl-stake-pool"
version = "0.7.0"
description = "Solana Program Library Stake Pool"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.10.3"
mpl-token-metadata =  { version = "1.7.0", features = [ "no-entrypoint" ] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.9"
serde = "1.0.130"
serde_derive = "1.0.103"
domichain-program = { path = "../../../domichain/sdk/program" }
spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "0.6", path = "../../token/program-2022", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "1.0"
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }
domichain-vote-program = { path = "../../../domichain/programs/vote" }
spl-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
test-case = "2.2"

[lib]
crate-type = ["cdylib", "lib"]
