[package]
name = "spl-stake-pool"
version = "0.7.0"
description = "Solana Program Library Stake Pool"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
borsh = "0.10"
bytemuck = "1.13"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.0"
serde = "1.0.189"
serde_derive = "1.0.103"
domichain-program = { path = "../../../domichain/sdk/program" }
spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "0.6", path = "../../token/program-2022", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.3"
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }
domichain-vote-program = { path = "../../../domichain/programs/vote" }
spl-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
test-case = "3.2"

[lib]
crate-type = ["cdylib", "lib"]
