[package]
name = "stateless-asks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.10"
domichain-program = { path = "../../../domichain/sdk/program" }
spl-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.1", path = "../../associated-token-account/program", features = ["no-entrypoint"]}
thiserror = "1.0"

[dev-dependencies]
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
