[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL Token Lending CLI"
edition = "2021"
homepage = "https://spl.solana.com/token-lending"
license = "Apache-2.0"
name = "spl-token-lending-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.2.0"

[dependencies]
clap = "2.33.3"
domichain-clap-utils = { path = "../../../domichain/clap-utils" }
domichain-cli-config = { path = "../../../domichain/cli-config" }
domichain-client = { path = "../../../domichain/client" }
domichain-logger = { path = "../../../domichain/logger" }
domichain-sdk = { path = "../../../domichain/sdk" }
domichain-program = { path = "../../../domichain/sdk/program" }
spl-token-lending = { version = "0.2", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.5", path="../../token/program", features = [ "no-entrypoint" ]  }

[[bin]]
name = "spl-token-lending"
path = "src/main.rs"
