[package]
name = "spl-token-upgrade-cli"
version = "0.1.1"
description = "SPL Token Upgrade Command-line Utility"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
walkdir = "2"

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.19"
domichain-clap-v3-utils = { path = "../../../domichain/clap-v3-utils" }
domichain-cli-config = { path = "../../../domichain/cli-config" }
domichain-client = { path = "../../../domichain/client" }
domichain-logger = { path = "../../../domichain/logger" }
domichain-remote-wallet = { path = "../../../domichain/remote-wallet" }
domichain-sdk = { path = "../../../domichain/sdk" }
spl-associated-token-account = { version = "1.1", path = "../../associated-token-account/program", features = ["no-entrypoint"] }
spl-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.6", path = "../../token/program-2022", features = ["no-entrypoint"] }
spl-token-client = { version = "0.4", path = "../../token/client" }
spl-token-upgrade = { version = "0.1", path = "../program", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
domichain-test-validator = { path = "../../../domichain/test-validator" }

[[bin]]
name = "spl-token-upgrade"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
