[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Token Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "spl-token-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "2.3.0"

[build-dependencies]
walkdir = "2"

[dependencies]
clap = "2.33.3"
console = "0.15.0"
indicatif = "0.16.2"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.68"
domichain-account-decoder = { path = "../../../domichain/account-decoder" }
domichain-clap-utils = { path = "../../../domichain/clap-utils" }
domichain-cli-config = { path = "../../../domichain/cli-config" }
domichain-cli-output = { path = "../../../domichain/cli-output" }
domichain-client = { path = "../../../domichain/client" }
domichain-logger = { path = "../../../domichain/logger" }
domichain-remote-wallet = { path = "../../../domichain/remote-wallet" }
domichain-sdk = { path = "../../../domichain/sdk" }
domichain-transaction-status = { path = "../../../domichain/transaction-status" }
spl-token = { version = "3.5", path="../program", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "0.6", path="../program-2022", features = [ "no-entrypoint" ] }
spl-token-btci = { version = "3.5", path="../program-btci", features = [ "no-entrypoint" ] }
spl-token-client = { version = "0.4", path="../client" }
spl-associated-token-account = { version = "1.1", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-memo = { version = "3.0.1", path="../../memo/program", features = ["no-entrypoint"] }
strum = "0.24"
strum_macros = "0.24"
tokio = "1.14"

[dev-dependencies]
domichain-test-validator = { path = "../../../domichain/test-validator" }
assert_cmd = "2.0.4"
serial_test = "0.8.0"
tempfile = "3.4.0"

[[bin]]
name = "spl-token"
path = "src/main.rs"
