[package]
authors = ["Domichain Labs Maintainers <maintainers@domichainlabs.com>"]
description = "SPL-Token Rust Client"
edition = "2021"
license = "Apache-2.0"
name = "spl-token-client"
repository = "https://github.com/domichain-labs/domichain-program-library"
version = "0.4.1"

[dependencies]
async-trait = "0.1"
domichain-cli-output = { path = "../../../domichain/cli-output", optional = true }
domichain-client = { path = "../../../domichain/client" }
domichain-program-test = { path = "../../../domichain/program-test" }
domichain-sdk = { path = "../../../domichain/sdk" }
# We never want the entrypoint for ATA, but we want the entrypoint for token when
# testing token
spl-associated-token-account = { version = "1.1", path = "../../associated-token-account/program", features = ["no-entrypoint"] }
spl-memo = { version = "3.0.1", path = "../../memo/program", features = ["no-entrypoint"] }
spl-token = { version = "3.5", path="../program", features = [ "no-entrypoint" ] }
spl-token-btci = { version = "3.5", path="../program-btci", features = [ "no-entrypoint" ] }
spl-token-usdt = { version = "3.5", path="../program-usdt", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "0.6", path="../program-2022" }
thiserror = "1.0"

[features]
default = ["display"]
display = ["dep:domichain-cli-output"]
proof-program = []
