[package]
name = "spl-token-usdt"
version = "3.5.0"
description = "Solana Program Library Token"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.13.0"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.9"
domichain-program = { path = "../../../domichain/sdk/program", version = "1.0.0" }
thiserror = "1.0"

# [dev-dependencies]
# lazy_static = "1.4.0"
# proptest = "1.0"
# serial_test = "0.5.1"
# domichain-program-test = { path = "../../../domichain/program-test", version = "1.0.0" }
# domichain-sdk = { path = "../../../domichain/sdk", version = "1.0.0" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
